More change for async-profiler